--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body class="page">
     <header class="header">
-      <p class="header__logo">&lt;/html&gt;</p>
+      <a class="header__logo">&lt;/html&gt;</a>
       <h1 class="header__title">закрывающий тег</h1>
       <nav class="theme-menu header__theme-menu">
         <!-- Не меняйте разметку этого списка, иначе скрипты перестанут работать -->
@@ -48,6 +48,7 @@
     </header>
 
     <main class="content">
+      <section class="section__cards">
       <ul class="content__card-list">
         <li class="content__card-item">
           <article class="card">
@@ -76,11 +77,11 @@
                 В конце немного написал &#708;&minus;&#708;
               </p>
               <div class="card-button">
-                <button class="card__icon-button">
+                <button type="button" class="card__icon-button">
                   <svg
                     class="like-icon"
+                    aria-hidden="true"
                     xmlns="http://www.w3.org/2000/svg"
-                    id="heart-in-path"
                     width="39"
                     height="36"
                   >
@@ -108,7 +109,7 @@
                     />
                   </svg>
                 </button>
-                <button class="card__like-button button-focus button-hover">
+                <button type="button" class="card__like-button button-focus button-hover">
                   <span class="button__text">Like</span>
                 </button>
               </div>
@@ -141,11 +142,11 @@
                 Место для ваших воспоминаний о начале первого спринта.
               </p>
               <div class="card-button">
-                <button class="card__icon-button">
+                <button type="button" class="card__icon-button">
                   <svg
                     class="like-icon"
+                    aria-hidden="true"
                     xmlns="http://www.w3.org/2000/svg"
-                    id="heart-in-path"
                     width="39"
                     height="36"
                   >
@@ -173,7 +174,7 @@
                     />
                   </svg>
                 </button>
-                <button class="card__like-button button-focus button-hover">
+                <button type="button" class="card__like-button button-focus button-hover">
                   <span class="button__text">Like</span>
                 </button>
               </div>
@@ -205,11 +206,11 @@
                 Место для ваших воспоминаний об окончании первого спринта.
               </p>
               <div class="card-button">
-                <button class="card__icon-button">
+                <button type="button" class="card__icon-button">
                   <svg
                     class="like-icon"
+                    aria-hidden="true"
                     xmlns="http://www.w3.org/2000/svg"
-                    id="heart-in-path"
                     width="39"
                     height="36"
                   >
@@ -237,7 +238,7 @@
                     />
                   </svg>
                 </button>
-                <button class="card__like-button button-focus button-hover">
+                <button type="button" class="card__like-button button-focus button-hover">
                   <span class="button__text">Like</span>
                 </button>
               </div>
@@ -269,11 +270,11 @@
                 Место для ваших воспоминаний о начале второго спринта.
               </p>
               <div class="card-button">
-                <button class="card__icon-button">
+                <button type="button" class="card__icon-button">
                   <svg
                     class="like-icon"
+                    aria-hidden="true"
                     xmlns="http://www.w3.org/2000/svg"
-                    id="heart-in-path"
                     width="39"
                     height="36"
                   >
@@ -301,7 +302,7 @@
                     />
                   </svg>
                 </button>
-                <button class="card__like-button button-focus button-hover">
+                <button type="button" class="card__like-button button-focus button-hover">
                   <span class="button__text">Like</span>
                 </button>
               </div>
@@ -334,11 +335,11 @@
                 Место для ваших воспоминаний об окончании второго спринта.
               </p>
               <div class="card-button">
-                <button class="card__icon-button">
+                <button type="button" class="card__icon-button">
                   <svg
                     class="like-icon"
+                    aria-hidden="true"
                     xmlns="http://www.w3.org/2000/svg"
-                    id="heart-in-path"
                     width="39"
                     height="36"
                   >
@@ -366,7 +367,7 @@
                     />
                   </svg>
                 </button>
-                <button class="card__like-button button-focus button-hover">
+                <button type="button" class="card__like-button button-focus button-hover">
                   <span class="button__text">Like</span>
                 </button>
               </div>
@@ -396,11 +397,11 @@
                 Место для ваших воспоминаний о начале третьего спринта.
               </p>
               <div class="card-button">
-                <button class="card__icon-button">
+                <button type="button" class="card__icon-button">
                   <svg
                     class="like-icon"
+                    aria-hidden="true"
                     xmlns="http://www.w3.org/2000/svg"
-                    id="heart-in-path"
                     width="39"
                     height="36"
                   >
@@ -428,7 +429,7 @@
                     />
                   </svg>
                 </button>
-                <button class="card__like-button button-focus button-hover">
+                <button type="button" class="card__like-button button-focus button-hover">
                   <span class="button__text">Like</span>
                 </button>
               </div>
@@ -462,11 +463,11 @@
                 Место для ваших воспоминаний об окончании третьего спринта.
               </p>
               <div class="card-button">
-                <button class="card__icon-button">
+                <button type="button" class="card__icon-button">
                   <svg
                     class="like-icon"
+                    aria-hidden="true"
                     xmlns="http://www.w3.org/2000/svg"
-                    id="heart-in-path"
                     width="39"
                     height="36"
                   >
@@ -494,7 +495,7 @@
                     />
                   </svg>
                 </button>
-                <button class="card__like-button button-focus button-hover">
+                <button type="button" class="card__like-button button-focus button-hover">
                   <span class="button__text">Like</span>
                 </button>
               </div>
@@ -531,11 +532,11 @@
                 Но я не стану бросать начатое, а буду идти до конца.
               </p>
               <div class="card-button">
-                <button class="card__icon-button">
+                <button type="button" class="card__icon-button">
                   <svg
                     class="like-icon"
+                    aria-hidden="true"
                     xmlns="http://www.w3.org/2000/svg"
-                    id="heart-in-path"
                     width="39"
                     height="36"
                   >
@@ -563,7 +564,7 @@
                     />
                   </svg>
                 </button>
-                <button class="card__like-button button-focus button-hover">
+                <button type="button" class="card__like-button button-focus button-hover">
                   <span class="button__text">Like</span>
                 </button>
               </div>
@@ -571,29 +572,31 @@
           </article>
         </li>
       </ul>
-    </main>
+    </section>
 
-    <footer class="footer">
+    <section class="section__dialog">
       <button
-        class="footer__button button-focus button-hover"
+        class="dialog-button button-focus button-hover"
         type="button"
         onclick="window['popup'].showModal();"
         aria-controls="popup"
       >
-        <svg class="floppy" viewBox="0 0 40 40">
+        <svg class="floppy" aria-hidden="true" viewBox="0 0 40 40">
           <use href="./svg/floppy.svg#floppy"></use>
         </svg>
         <span class="button__text">Сохранить на память</span>
       </button>
-    </footer>
+    </section>
+  </main>
 
     <dialog id="popup" class="popup__container">
       <div class="popup__content">
-        <svg class="popup__floppy" width="39" height="39">
+        <svg class="popup__floppy" aria-hidden="true" width="39" height="39">
           <use href="./svg/floppy.svg#floppy"></use>
         </svg>
         <span class="button__text">Вставьте дискету, чтобы продолжить</span>
       </div>
+      <form method="dialog">
       <button
         class="close__button button-hover button-focus"
         type="button"
@@ -601,6 +604,7 @@
       >
         <span class="button__text">ок</span>
       </button>
+    </form>
     </dialog>
 
     <script src="./scripts/like.js"></script>
